fix: swagger API notation syntax
